--- a/index.html
+++ b/index.html
@@ -2,44 +2,85 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>For My Love ❤️</title>
+<title>For My Forever ❤️</title>
+
+<!-- Luxury Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Great+Vibes&display=swap" rel="stylesheet">
+
 <style>
+
 body {
-  text-align: center;
-  font-family: 'Arial', sans-serif;
-  background: linear-gradient(to bottom right, #ff9a9e, #fad0c4);
-  overflow: hidden;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  font-family: 'Playfair Display', serif;
+  background: linear-gradient(135deg, #4b0f19, #7b1e2b, #f3d1c3);
+  background-size: 300% 300%;
+  animation: gradientMove 15s ease infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: white;
 }
 
-.container {
-  margin-top: 15%;
+@keyframes gradientMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+/* Glass Card */
+.card {
+  backdrop-filter: blur(20px);
+  background: rgba(255, 255, 255, 0.08);
+  padding: 60px 80px;
+  border-radius: 25px;
+  text-align: center;
+  box-shadow: 0 0 60px rgba(255, 215, 180, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  max-width: 700px;
 }
 
 h1 {
-  font-size: 40px;
-  color: white;
+  font-family: 'Great Vibes', cursive;
+  font-size: 60px;
+  margin-bottom: 20px;
+  letter-spacing: 2px;
 }
 
+h2 {
+  font-weight: 500;
+  margin-bottom: 40px;
+}
+
+/* Buttons */
 button {
-  padding: 15px 30px;
-  font-size: 20px;
+  padding: 15px 40px;
+  font-size: 18px;
+  border-radius: 40px;
   border: none;
-  border-radius: 10px;
+  margin: 10px;
   cursor: pointer;
-  margin: 20px;
-  transition: 0.3s;
+  transition: 0.4s ease;
+  font-family: 'Playfair Display', serif;
 }
 
 #yesBtn {
-  background-color: #ff4d6d;
-  color: white;
+  background: linear-gradient(45deg, #d4af37, #f8e7b0);
+  color: #4b0f19;
+  box-shadow: 0 0 20px rgba(255,215,0,0.6);
+}
+
+#yesBtn:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 40px rgba(255,215,0,0.9);
 }
 
 #noBtn {
-  background-color: white;
-  color: #ff4d6d;
+  background: transparent;
+  border: 1px solid white;
+  color: white;
   position: absolute;
 }
 
@@ -47,56 +88,67 @@ button {
   display: none;
 }
 
+/* Letter */
 .letter {
-  font-size: 24px;
-  color: white;
-  width: 70%;
-  margin: auto;
-  margin-top: 10%;
-  animation: fadeIn 3s ease-in-out;
+  font-size: 22px;
+  line-height: 1.8;
+  animation: fadeIn 2.5s ease forwards;
+  opacity: 0;
+}
+
+.letter h1 {
+  font-size: 55px;
 }
 
 @keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
+  to { opacity: 1; }
 }
 
-.heart {
+/* Golden Floating Particles */
+.particle {
   position: fixed;
-  color: red;
-  animation: float 5s linear infinite;
+  width: 8px;
+  height: 8px;
+  background: gold;
+  border-radius: 50%;
+  opacity: 0.7;
+  animation: floatUp 6s linear infinite;
 }
 
-@keyframes float {
-  from {transform: translateY(100vh);}
-  to {transform: translateY(-10vh);}
+@keyframes floatUp {
+  from { transform: translateY(100vh); opacity: 1; }
+  to { transform: translateY(-10vh); opacity: 0; }
 }
+
 </style>
 </head>
+
 <body>
 
-<div class="container" id="main">
-  <h1>My Beautiful Love ❤️</h1>
-  <h2>Will you be my Valentine?</h2>
-  <button id="yesBtn">Yes 💖</button>
-  <button id="noBtn">No 😢</button>
+<div class="card" id="main">
+  <h1>My Eternal Love</h1>
+  <h2>Will you be mine, today and always?</h2>
+  <button id="yesBtn">Yes, Forever 💍</button>
+  <button id="noBtn">No</button>
 </div>
 
-<div class="hidden" id="loveLetter">
+<div class="card hidden" id="loveLetter">
   <div class="letter">
-    <h1>You Said Yes!!! 💍❤️</h1>
+    <h1>You Said Yes 💎❤️</h1>
     <p>
-      My love,  
-      From the moment you came into my life, everything became brighter.  
-      Your smile is my favorite sight, your laugh my favorite sound,  
-      and your love my greatest blessing.  
-      I choose you today, tomorrow, and always.  
-      Forever yours. ❤️
+      My love,<br><br>
+      From the moment our souls met, the world softened and time slowed.  
+      You are the poetry in my silence, the warmth in my winter,  
+      the forever I never knew I was waiting for.<br><br>
+      I choose you in this lifetime and every lifetime after.  
+      Today, tomorrow, and endlessly.<br><br>
+      Yours — always.
     </p>
   </div>
 </div>
 
 <script>
+
 const yesBtn = document.getElementById("yesBtn");
 const noBtn = document.getElementById("noBtn");
 const main = document.getElementById("main");
@@ -105,7 +157,7 @@ const loveLetter = document.getElementById("loveLetter");
 yesBtn.addEventListener("click", () => {
   main.classList.add("hidden");
   loveLetter.classList.remove("hidden");
-  createHearts();
+  createParticles();
 });
 
 noBtn.addEventListener("mouseover", () => {
@@ -115,20 +167,20 @@ noBtn.addEventListener("mouseover", () => {
   noBtn.style.top = y + "px";
 });
 
-function createHearts() {
+function createParticles() {
   setInterval(() => {
-    const heart = document.createElement("div");
-    heart.classList.add("heart");
-    heart.innerHTML = "❤️";
-    heart.style.left = Math.random() * 100 + "vw";
-    heart.style.fontSize = Math.random() * 20 + 20 + "px";
-    document.body.appendChild(heart);
+    const particle = document.createElement("div");
+    particle.classList.add("particle");
+    particle.style.left = Math.random() * 100 + "vw";
+    particle.style.animationDuration = (Math.random() * 3 + 3) + "s";
+    document.body.appendChild(particle);
 
     setTimeout(() => {
-      heart.remove();
-    }, 5000);
-  }, 300);
+      particle.remove();
+    }, 6000);
+  }, 200);
 }
+
 </script>
 
 </body>
