--- a/index.html
+++ b/index.html
@@ -1,122 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>For My Beautiful Wife ❤️</title>
+<title>For My Love</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;800&family=Great+Vibes&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Italiana&display=swap" rel="stylesheet">
 
 <style>
 
-body {
+* {
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  font-family: 'Playfair Display', serif;
-  background: linear-gradient(135deg, #ff4d6d, #ff8fab, #ffffff);
-  background-size: 300% 300%;
-  animation: gradientMove 12s ease infinite;
+  box-sizing: border-box;
+}
+
+body {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  background: radial-gradient(circle at center, #3b0a18 0%, #1a0007 60%, #000000 100%);
+  font-family: 'Cormorant Garamond', serif;
+  color: #f5e6d3;
+  overflow: hidden;
 }
 
-@keyframes gradientMove {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
+/* Subtle ambient glow */
+body::before {
+  content: "";
+  position: absolute;
+  width: 800px;
+  height: 800px;
+  background: radial-gradient(circle, rgba(180,40,70,0.35), transparent 70%);
+  animation: slowPulse 8s ease-in-out infinite alternate;
 }
 
-/* Glass Card */
+@keyframes slowPulse {
+  from { transform: scale(1); opacity: 0.5; }
+  to { transform: scale(1.2); opacity: 0.8; }
+}
+
+/* Elegant Card */
 .card {
-  backdrop-filter: blur(20px);
-  background: rgba(255,255,255,0.18);
-  padding: 60px 80px;
-  border-radius: 30px;
+  position: relative;
   text-align: center;
-  box-shadow: 0 0 70px rgba(255,255,255,0.5);
-  border: 1px solid rgba(255,255,255,0.4);
-  max-width: 750px;
-  animation: fadeIn 1.5s ease;
+  max-width: 800px;
+  padding: 80px 60px;
+  background: rgba(255, 255, 255, 0.04);
+  backdrop-filter: blur(25px);
+  border: 1px solid rgba(212, 175, 55, 0.2);
+  border-radius: 20px;
+  box-shadow: 0 0 60px rgba(212, 175, 55, 0.15);
+  animation: fadeIn 2s ease forwards;
 }
 
-.hidden { display: none; }
+.hidden {
+  display: none;
+}
 
 .title {
-  font-family: 'Great Vibes', cursive;
-  font-size: 55px;
-  margin-bottom: 20px;
+  font-family: 'Italiana', serif;
+  font-size: 56px;
+  letter-spacing: 2px;
+  margin-bottom: 30px;
+  color: #e8c27a;
 }
 
-.question {
-  font-size: 40px;
-  font-weight: 800;
-  margin-bottom: 40px;
+.subtitle {
+  font-size: 28px;
+  margin-bottom: 60px;
+  font-weight: 400;
+  letter-spacing: 1px;
 }
 
 button {
-  padding: 15px 40px;
+  padding: 14px 45px;
   font-size: 18px;
-  border-radius: 40px;
-  border: none;
-  margin: 15px;
-  cursor: pointer;
-  transition: 0.4s ease;
-  font-family: 'Playfair Display', serif;
-}
-
-#yesBtn, #areYesBtn {
-  background: white;
-  color: #ff4d6d;
-  font-weight: bold;
-  box-shadow: 0 0 25px rgba(255,255,255,0.8);
-}
-
-#yesBtn:hover, #areYesBtn:hover {
-  transform: scale(1.1);
-  background: #ff4d6d;
-  color: white;
-}
-
-#noBtn {
+  border-radius: 50px;
+  border: 1px solid #d4af37;
   background: transparent;
-  border: 2px solid white;
-  color: white;
-  position: absolute;
+  color: #e8c27a;
+  cursor: pointer;
+  letter-spacing: 1px;
+  transition: all 0.4s ease;
+}
+
+button:hover {
+  background: #d4af37;
+  color: #1a0007;
+  box-shadow: 0 0 25px rgba(212, 175, 55, 0.6);
 }
 
 .message {
   font-size: 22px;
-  line-height: 1.8;
-  animation: fadeIn 3s ease forwards;
+  line-height: 1.9;
+  font-weight: 300;
   opacity: 0;
+  animation: fadeIn 3s ease forwards;
 }
 
 @keyframes fadeIn {
-  to { opacity: 1; }
-}
-
-/* Wink Animation */
-.wink {
-  animation: winkPulse 1.5s infinite;
-}
-
-@keyframes winkPulse {
-  0%,100% { transform: scale(1); }
-  50% { transform: scale(1.2); }
-}
-
-/* Floating Decorations */
-.float {
-  position: fixed;
-  animation: floatUp linear infinite;
-}
-
-@keyframes floatUp {
-  from { transform: translateY(100vh); opacity: 1; }
-  to { transform: translateY(-10vh); opacity: 0; }
+  from { opacity: 0; transform: translateY(30px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 
 </style>
@@ -124,28 +109,22 @@ button {
 
 <body>
 
-<!-- PAGE 1 -->
 <div class="card" id="page1">
-  <div class="title">For My Beautiful Wife ❤️</div>
-  <div class="question">Will you be my Valentine?</div>
-  <button id="yesBtn">Yes 💖</button>
-  <button id="noBtn">No</button>
+  <div class="title">For My Beautiful Wife</div>
+  <div class="subtitle">Will you be my Valentine?</div>
+  <button id="yesBtn">Yes</button>
 </div>
 
-<!-- PAGE 2 -->
 <div class="card hidden" id="page2">
-  <div class="question">Are you? <span class="wink">😉</span></div>
-  <button id="areYesBtn">Yes, I Am 💕</button>
-</div>
-
-<!-- PAGE 3 -->
-<div class="card hidden" id="page3">
-  <div class="title">To My Beautiful Valentine ❤️</div>
+  <div class="title">My Valentine</div>
   <div class="message">
-    Your presence in my life is like a blessing.  
-    You have made my life beautiful, and every moment with you feels like heaven.  
-    I have never been so happy in my life before.  
-    I love you so much for everything. 💕
+    Your presence in my life is not merely a blessing —  
+    it is the quiet miracle that changed everything.  
+    <br><br>
+    With you, love feels deeper, time feels softer,  
+    and every moment carries meaning.  
+    <br><br>
+    I cherish you beyond words.
   </div>
 </div>
 
@@ -153,41 +132,11 @@ button {
 
 const page1 = document.getElementById("page1");
 const page2 = document.getElementById("page2");
-const page3 = document.getElementById("page3");
 
 document.getElementById("yesBtn").addEventListener("click", () => {
   page1.classList.add("hidden");
   page2.classList.remove("hidden");
 });
-
-document.getElementById("areYesBtn").addEventListener("click", () => {
-  page2.classList.add("hidden");
-  page3.classList.remove("hidden");
-});
-
-document.getElementById("noBtn").addEventListener("mouseover", () => {
-  const x = Math.random() * window.innerWidth;
-  const y = Math.random() * window.innerHeight;
-  noBtn.style.left = x + "px";
-  noBtn.style.top = y + "px";
-});
-
-/* Continuous Romantic Elements */
-setInterval(() => {
-  const items = ["❤️", "🌹", "💐", "🎈"];
-  const el = document.createElement("div");
-  el.classList.add("float");
-  el.innerHTML = items[Math.floor(Math.random() * items.length)];
-  el.style.left = Math.random() * 100 + "vw";
-  el.style.fontSize = (Math.random() * 20 + 25) + "px";
-  el.style.animationDuration = (Math.random() * 4 + 4) + "s";
-  document.body.appendChild(el);
-
-  setTimeout(() => {
-    el.remove();
-  }, 8000);
-
-}, 300);
 
 </script>
 
